<resources>
    <string name="app_name">Eleven Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="Regisration">Regisration</string>
    <string name="eforms">E-forms</string>
    <string name="AcademicProgress">Academic Progress</string>
    <string name="Finances">Finances</string>
    <string name="tab1">Slideshow</string>
    <string name="Calendar">Calendar</string>

    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
</resources>