<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="presentation.HomeActivity"
    android:background="@mipmap/homebag"
>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/titleColor">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_centerInParent="true"
        android:text="Home"/>

    <ImageView
        android:id="@+id/ivSet"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:src="@mipmap/profile_icon" />
</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/Register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/add_drop_course" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Regisration"
                android:textColor="#333333" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/eforms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/new_eforms" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eforms"
                android:layout_marginTop="5dp"
                android:textColor="#333333" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Academic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/academic_progress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AcademicProgress"
                android:layout_marginTop="5dp"
                android:textColor="#333333" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/Finances"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/account_summary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Finances"
                android:textColor="#333333" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/calender" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Calendar"
                android:layout_marginTop="5dp"
                android:textColor="#333333" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/faq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/faq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FAQ"
                android:layout_marginTop="5dp"
                android:textColor="#333333" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>